// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RouterHelpers should return a generated baseName: app base lorem base name 1`] = `"/beta/appName"`;

exports[`RouterHelpers should return a generated baseName: app base name 1`] = `"/appName"`;

exports[`RouterHelpers should return a generated baseName: beta app base name 1`] = `"/beta/appName"`;

exports[`RouterHelpers should return a generated baseName: beta app lorem route name 1`] = `"/beta/appName"`;

exports[`RouterHelpers should return navigation and route details that align to location: detail: match specific path navigation 1`] = `
Object {
  "nav": Object {
    "default": true,
    "id": "all",
    "path": "/rhel-sw/all",
    "pathId": "rhel-sw",
    "pathParameter": "RHEL",
    "title": "Red Hat Enterprise Linux",
  },
  "navRoute": Object {
    "component": [Function],
    "default": true,
    "disabled": false,
    "exact": true,
    "id": "all",
    "path": "/rhel-sw/all",
    "pathId": "rhel-sw",
    "pathParameter": "RHEL",
    "redirect": true,
    "render": true,
    "title": "Red Hat Enterprise Linux",
    "to": "/rhel-sw/all",
  },
  "route": Object {
    "component": [Function],
    "disabled": false,
    "exact": true,
    "redirect": true,
    "render": true,
    "title": "Red Hat Enterprise Linux",
    "to": "/rhel-sw/all",
  },
}
`;

exports[`RouterHelpers should return navigation and route details that align to location: detail: missing ID, specific path 1`] = `
Object {
  "nav": Object {
    "default": true,
    "id": "all",
    "path": "/rhel-sw/all",
    "pathId": "rhel-sw",
    "pathParameter": "RHEL",
    "title": "Red Hat Enterprise Linux",
  },
  "navRoute": Object {
    "component": [Function],
    "default": true,
    "disabled": false,
    "exact": true,
    "id": "all",
    "path": "/rhel-sw/all",
    "pathId": "rhel-sw",
    "pathParameter": "RHEL",
    "redirect": true,
    "render": true,
    "title": "Red Hat Enterprise Linux",
    "to": "/rhel-sw/all",
  },
  "route": Object {
    "component": [Function],
    "disabled": false,
    "exact": true,
    "redirect": true,
    "render": true,
    "title": "Red Hat Enterprise Linux",
    "to": "/rhel-sw/all",
  },
}
`;

exports[`RouterHelpers should return navigation and route details that align to location: detail: missing id and pathname and default 1`] = `
Object {
  "nav": Object {},
  "navRoute": Object {},
  "route": Object {},
}
`;

exports[`RouterHelpers should return navigation and route details that align to location: detail: missing id and pathname, default 1`] = `
Object {
  "nav": Object {
    "default": true,
    "id": "all",
    "path": "/rhel-sw/all",
    "pathId": "rhel-sw",
    "pathParameter": "RHEL",
    "title": "Red Hat Enterprise Linux",
  },
  "navRoute": Object {
    "component": [Function],
    "default": true,
    "disabled": false,
    "exact": true,
    "id": "all",
    "path": "/rhel-sw/all",
    "pathId": "rhel-sw",
    "pathParameter": "RHEL",
    "redirect": true,
    "render": true,
    "title": "Red Hat Enterprise Linux",
    "to": "/rhel-sw/all",
  },
  "route": Object {},
}
`;

exports[`RouterHelpers should return navigation and route details that align to location: detail: missing parameters 1`] = `
Object {
  "nav": Object {},
  "navRoute": Object {},
  "route": Object {},
}
`;

exports[`RouterHelpers should return navigation and route details that align to location: detail: specific navigation ID 1`] = `
Object {
  "nav": Object {
    "id": "arm",
    "path": "/rhel-sw/arm",
    "pathId": "rhel-sw",
    "pathParameter": "RHEL for ARM",
    "title": "ARM",
  },
  "navRoute": Object {
    "component": [Function],
    "disabled": false,
    "exact": true,
    "id": "arm",
    "path": "/rhel-sw/arm",
    "pathId": "rhel-sw",
    "pathParameter": "RHEL for ARM",
    "render": true,
    "title": "ARM",
    "to": "/rhel-sw/:variant",
  },
  "route": Object {},
}
`;

exports[`RouterHelpers should return navigation and route details that align to location: detail: specific route ID 1`] = `
Object {
  "nav": Object {},
  "navRoute": Object {},
  "route": Object {
    "activateOnError": true,
    "component": [Function],
    "disabled": false,
    "exact": true,
    "id": "soon",
    "render": true,
    "title": "Tour",
    "to": "/soon",
  },
}
`;
